Criação das atividades 2 e 3

--- a/capitulo1/exercicios/ex1.html
+++ b/capitulo1/exercicios/ex1.html
@@ -94,5 +94,7 @@
         <td class="moeda">R$ 1.470,00</td>
       </tr>
     </table>
+    <br />
+    <a href="../../sumario.html"><-Retornar ao Sumário</a>
   </body>
 </html>
