--- a/capitulo1/fundamentos.html
+++ b/capitulo1/fundamentos.html
@@ -25,5 +25,7 @@
         está ocorrendo na camada de gelo que cobre o Ártico.
       </i>
     </blockquote>
+    <br />
+    <a href="../../sumario.html"><-Retornar ao Sumário</a>
   </body>
 </html>
