--- a/capitulo1/exercicios/ex2.html
+++ b/capitulo1/exercicios/ex2.html
@@ -6,7 +6,11 @@
     <title>Mapa das Regiões do Brasil</title>
   </head>
   <body>
-    <img src="img/Mapa sobre as regiões do Brasil.png" usemap="#image-map" />
+    <h1>Mapa das Regiões do Brasil</h1>
+    <img
+      src="../../img/Mapa sobre as regiões do Brasil.png"
+      usemap="#image-map"
+    />
 
     <map name="image-map">
       <area
