--- a/capitulo1/fundamentos.html
+++ b/capitulo1/fundamentos.html
@@ -26,6 +26,6 @@
       </i>
     </blockquote>
     <br />
-    <a href="../../sumario.html"><-Retornar ao Sumário</a>
+    <a href="../sumario.html"><-Retornar ao Sumário</a>
   </body>
 </html>
