--- a/capitulo1/introducao.html
+++ b/capitulo1/introducao.html
@@ -11,7 +11,7 @@
     <a href="#meio">Ir para o meio</a><br />
     <a href="#fim">Ir para o fim</a><br />
     <br />
-    <a href="../../sumario.html"><-Retornar ao Sumário</a>
+    <a href="../sumario.html"><-Retornar ao Sumário</a>
 
     <h2 id="inicio">Inicio</h2>
 
