--- a/sumario.html
+++ b/sumario.html
@@ -11,7 +11,7 @@
       <li><h2>Capítulo 1</h2></li>
       <ol>
         <li>
-          <a href="/capitulo1/introducao.html">Introduçao</a>
+          <a href="capitulo1/introducao.html">Introdução</a>
         </li>
         <li>
           <a href="capitulo1/fundamentos.html">Fundamentos</a>
@@ -19,7 +19,8 @@
         <li><h2>Exercícios</h2></li>
         <ol type="I">
           <li><a href="capitulo1/exercicios/ex1.html">Exercício 1</a></li>
-          <li><a href="">Exercício 2</a></li>
+          <li><a href="capitulo1/exercicios/ex2.html">Exercício 2</a></li>
+          <li><a href="capitulo1/exercicios/ex3.html">Exercício 3</a></li>
         </ol>
       </ol>
       <li><h2>Capítulo 2</h2></li>
