--- a/capitulo1/exercicios/ex3.html
+++ b/capitulo1/exercicios/ex3.html
@@ -8,7 +8,7 @@
   <body>
     <h1>PDF de Exemplo</h1>
     <object
-      data="docs/BSI 2025-2.pdf"
+      data="../../docs/BSI 2025-2.pdf"
       type="application/pdf"
       width="100%"
       height="750px"
