--- a/capitulo1/exercicios/ex4.html
+++ b/capitulo1/exercicios/ex4.html
@@ -7,7 +7,11 @@
   </head>
   <body>
     <h1>Novo Pedido</h1>
-    <form action="https://postman-echo.com/post" method="post">
+    <form
+      action="https://postman-echo.com/post"
+      method="post"
+      enctype="multipart/form-data"
+    >
       <fieldset>
         <legend>Informações do Cliente</legend>
 
