Estilização do index.html

--- a/sumario.html
+++ b/sumario.html
@@ -28,6 +28,6 @@
         <li><a href="capitulo2/introducao.html">Introdução</a></li>
       </ol>
     </ol>
-    <a href="home.html">Retornar à página inicial</a>
+    <a href="index.html">Retornar à página inicial</a>
   </body>
 </html>
